Update requirements.txt with new dependencies
Updated dependencies by adding new libraries and removing outdated ones.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 pandas
-re
-datetime
-sklearn
-sqlite3
-faiss
-langchain
-groq
+numpy
+scikit-learn
+sentence-transformers
+faiss-cpu
 openai
+streamlit
+fastapi
+uvicorn
+plotly
+joblib
+python-dotenv
